--- a/search/src/search.css
+++ b/search/src/search.css
@@ -6,7 +6,7 @@
     height: 100vh;
     padding: 10px;
     height: 100%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  */
 }
 .img{
     width: 100px;
@@ -26,10 +26,18 @@
 .box{
     margin-top: 10px;
     text-align: center; 
+   
 }
 
 .search{
     margin-bottom: 20px;
     padding: 5px;
     width: 800px;
+    margin-top: 10px;
+   
+}
+.st{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.123);
+    border-radius: 3px;
+    background-color: #f5f5f5;
 }
