--- a/search/src/search.css
+++ b/search/src/search.css
@@ -12,7 +12,7 @@
     width: 100px;
     height: 100px;
 }
-.card{
+.countryCard{
     width: 200px;
     border: 1px solid #ccc;
     border-radius: 10px;
